--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -110,7 +110,7 @@ label {
     flex-direction: column;
 }
 
-.label-show-password {
+.label-password {
     order: 3;
 }
 
@@ -143,7 +143,7 @@ label input[name="password"] {
     -webkit-text-security: disc;
 }
 
-input[name="show-password"]:checked ~ div label input[name="password"] {
+input[name="password"]:checked ~ div label input[name="password"] {
     -webkit-text-security: none;
 }
 
