--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -17,26 +17,22 @@
             <div class="modal-body">
                 <div class="column" id="main">
 
-                    <form method="get" action="${'/login'}" id="login-form" class="login-form" autocomplete="off" role="main">
+                    <form method="post" th:action="${'/login'}" id="login-form" class="login-form" autocomplete="off" role="main">
                         <h1 class="a11y-hidden">Login Form</h1>
                         <div>
-                            <label class="label-email">
-                                <input type="email" class="text" name="email" placeholder="Email" tabindex="1" required />
-                                <span class="required">Email</span>
+                            <label class="label-username">
+                                <input type="username" class="text" id="username" th:name="${'username'}" placeholder="Username" tabindex="1" required />
+                                <span class="required">Username</span>
                             </label>
                         </div>
-                        <input type="checkbox" name="show-password" class="show-password a11y-hidden" id="show-password" tabindex="3" />
-                        <label class="label-show-password" for="show-password">
-                            <span>Show Password</span>
-                        </label>
                         <div>
                             <label class="label-password">
-                                <input type="text" class="text" name="password" placeholder="Password" tabindex="2" required />
+                                <input type="password" class="text" id="inputPassword" th:name="${'password'}" placeholder="Password" tabindex="2" required />
                                 <span class="required">Password</span>
                             </label>
                         </div>
                         <input type="submit" value="Log In" />
-                        <div class="email">
+                        <div class="username">
                             <a href="#">Forgot password?</a>
                         </div>
                         <figure aria-hidden="true">
