--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -26,6 +26,8 @@
                         <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_HR_MANAGER' , 'ROLE_ADMIN')"  data-th-href="@{'/role'}" class="nav-link"> Role Management </a>
                         <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER')"  data-th-href="@{'/category'}" class="nav-link"> Category Management </a>
                         <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER' ,'ROLE_CASHIER')"  data-th-href="@{'/item'}" class="nav-link"> Item Management </a>
+                        <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER')"  data-th-href="@{'/itemColor'}" class="nav-link"> Item Color Management </a>
+                        <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER')"  data-th-href="@{'/brand'}" class="nav-link"> Brand Management </a>
                         <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER')"  data-th-href="@{'/supplier'}" class="nav-link"> Supplier Management </a>
                         <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER')"  data-th-href="@{'/purchaseOrder'}" class="nav-link"> Purchase Order Management </a>
                         <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER')"  data-th-href="@{'/goodReceivedNote'}" class="nav-link"> GRN Management </a>
@@ -45,6 +47,8 @@
                         <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_HR_MANAGER' , 'ROLE_ADMIN')" data-th-href="@{'/user/add'}" class="nav-link"> New User </a>
                         <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_HR_MANAGER' , 'ROLE_ADMIN')" data-th-href="@{'/role/add'}" class="nav-link"> New Role </a>
                         <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER')" data-th-href="@{'/category/add'}" class="nav-link"> New Category </a>
+                        <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER')"  data-th-href="@{'/itemColor/add'}" class="nav-link">New Item Color</a>
+                        <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER')"  data-th-href="@{'/brand/add'}" class="nav-link">New Brand</a>
                         <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER' ,'ROLE_CASHIER')"  data-th-href="@{'/item/add'}" class="nav-link"> New Item </a>
                         <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_PROCUREMENT_MANAGER')" data-th-href="@{'/supplier/add'}" class="nav-link"> New Supplier </a>
                         <a data-sec-authorize="hasAnyAuthority('ROLE_MANAGER', 'ROLE_ACCOUNT_MANAGER','ROLE_CASHIER')" data-th-href="@{'/invoice/add'}" class="nav-link"> New Invoice </a>
